--- a/css/menu-bottom.css
+++ b/css/menu-bottom.css
@@ -15,6 +15,10 @@ body {
   box-sizing: border-box; /* 박스 모델 설정 */
 }
 
+body {
+  font-family: "TTHakgyoansimJiugaeR", "NotoSans", sans-serif;
+}
+
 *,
 *::before,
 *::after {
@@ -261,11 +265,6 @@ body {
   }
 }
 
-/* nav와 footer CSS */
-body {
-  font-family: "TTHakgyoansimJiugaeR", "NotoSans", sans-serif;
-}
-
 /* nav css 정의 */
 .nav {
   padding: 1vh 10vw;
@@ -290,13 +289,13 @@ body {
 .nav-ico-box:hover {
   border: solid 2px #999999;
 }
- .nav-style {
+.nav-style {
   height: 100%;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
-} 
+}
 .nav-menu {
   display: flex;
 }
@@ -306,6 +305,11 @@ body {
 .nav-menu-text {
   margin: 0 50px;
 }
+
+/* .nav-menu-text h3 {
+  display: inline-block;
+} */
+
 .nav-menu-text:hover {
   color: #5da0d8;
   cursor: pointer;
@@ -314,6 +318,8 @@ body {
 .nav-menu-link {
   text-decoration: none;
   color: inherit;
+  margin-top: 16px;
+  height: 30px;
 }
 .nav-offcanvas {
   display: none;
@@ -345,11 +351,7 @@ body {
 }
 
 /* 네브바 미디어쿼리 -테블릿, 모바일 순 */
-
-
-
-
-@media (max-width: 799px) {
+@media (max-width: 1279px) {
   .nav-menu {
     display: none;
   }
@@ -365,7 +367,6 @@ body {
     display: flex;
     justify-content: space-evenly;
     background-color: #5da0d8;
-    
   }
   .offcanvas.offcanvas-top {
     height: 100%;
@@ -385,10 +386,9 @@ body {
   .nav-logo {
     display: none;
   }
-  
 }
 
-/* footer CSS 정의 */
+/* footer css 정의 */
 .footer-container {
   background-color: #221f20;
   height: 400px;
@@ -431,7 +431,6 @@ body {
   display: flex;
   color: white;
   margin-left: 30px;
-  margin-top: 10px;
 }
 .footer-info {
   margin: 20px 10px;
@@ -440,16 +439,13 @@ body {
   display: none;
 }
 
-/* footer 미디어 쿼리 */
-@media (max-width: 992px) {
+/* footer 미디어쿼리 */
+@media (max-width: 1279px) {
   .footer-container {
     background-color: #5da0d8;
-    height: 400px;
+    height: 200px;
     position: relative;
-    bottom: 0px;
-  }
-  .footer-items {
-    border: double 4px #ffffff;
+    overflow: hidden;
   }
   .footer-menu-container {
     display: none;
@@ -471,14 +467,16 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    border: double 4px #ffffff;
+    height: 100%;
   }
   .footer-copyright {
     display: none;
   }
   .footer-media-logo {
     display: block;
-    width: 50vw;
-    margin-top: 10px;
+    width: 150px;
+    margin-top: 5px;
   }
   .footer-media-logo-container {
     display: flex;
